2019-11-18 解决上一版本的小bug
1、改进图文直播定位，不依赖其它容器的高度。
2、后台可启用频道助手账号进行图文直播
3、修复频道列表只有1个频道列不出来问题

--- a/webroot/player/winter/css/playFlex_m.css
+++ b/webroot/player/winter/css/playFlex_m.css
@@ -3,7 +3,7 @@
     playFlex_m.css
     播放器手机Flex模板，winter皮肤样式
  */
-html {font-size:12px; }
+html {width:100%; height:100%;font-size:12px; }
 body{
     width:100%; height:100%;
     background-color:#fff;font-size:12px;margin:0;padding:0;
